# Projet-MC

./: FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_GUIDE.md  PROJECT_COMPLETE.md  README.md  TEST_RESULTS.md  pyproject.toml  requirements.txt  run_batch.py  run_experiment.py  run_production_experiments.py  test_all.py  test_comprehensive.py
docs/: 01_project_plan.md  02_game_specs.md  03_algorithms.md  04_experiments.md  05_cursor_prompts.md  06_report_outline.md
results/: rave_vs_grave_100.csv  rave_vs_grave_200.csv  rave_vs_grave_50.csv  summary.md  test_uct_vs_rave.csv  uct_vs_grave_100.csv  uct_vs_grave_200.csv  uct_vs_grave_50.csv  uct_vs_rave_100.csv  uct_vs_rave_200.csv  uct_vs_rave_50.csv
results/batch_test/: rave_vs_grave_20.csv  rave_vs_grave_30.csv  summary.md  uct_vs_grave_20.csv  uct_vs_grave_30.csv  uct_vs_rave_20.csv  uct_vs_rave_30.csv
results/large_scale/: rave_vs_grave_100.csv  rave_vs_grave_200.csv  rave_vs_grave_50.csv  rave_vs_grave_500.csv  summary.md  uct_vs_grave_100.csv  uct_vs_grave_200.csv  uct_vs_grave_50.csv  uct_vs_grave_500.csv  uct_vs_rave_100.csv  uct_vs_rave_200.csv  uct_vs_rave_50.csv  uct_vs_rave_500.csv
src/eval/: analyzer.py  batch_runner.py  benchmarks.py  match.py  plots.py  report_generator.py  runner.py  stats.py
src/games/: __init__.py  hex.py  random_agent.py
src/mcts/: __init__.py  grave.py  puct.py  rave.py  root_bandits.py  transposition.py  uct.py
tests/: __init__.py  test_hex.py  test_uct.py
